[package]
name = "redis-tui"
description = "a terminal interface for Redis"
homepage = "https://github.com/nullndr/redis-tui"
repository = "https://github.com/nullndr/redis-tui"
keywords = ["redis", "tui"]
version = "0.0.1"
edition = "2021"

[dependencies]
redis = "0.22.3"
crossterm = "0.25"
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }

[[bin]]
name = "redis-tui"
path = "src/main.rs"